ingress-main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2022-01-09T18:54:43Z"
  generation: 1
  name: main-ingress
  namespace: default
  resourceVersion: "9868"
  uid: 0d29e13f-601a-4950-b552-c9868b4f85bc
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: billing
            port:
              number: 8080
        path: /billing
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - hostname: localhost
