kuber-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-kuber-2
spec:
  containers:
  - name: app-kuber-container
    image: bokovets/kuber:0.1
    ports:
    - containerPort: 8000
