pod-myapp.yaml
#Создать 2 Pod
apiVersion: v1
kind: Pod

metadata:
  name: my-app
  # labels:
  #   env: prod
  #   app: main
  #   tier: fronend
  #   owner: Garipov
spec:
  containers:
    - name: container-apache
      image: httpd:latest
      ports:
        - containerPort: 80

    - name: container-api
      image: tomcat:8.5.38
      ports:
        - containerPort: 8080
