pod-myweb-ver1.yaml
apiVersion: v1
kind: Pod

metadata:
  name: my-web
  labels:
    env: prod
    app: main
    tier: fronend
    owner: Garipov
spec:
  container:
    - name: container-apache
      image: httpd:latest
      ports:
        - containerPort: 80
